--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <header class="hero">
-        <img src="images/avatar.jpg" class="avatar">
+        <img src="avatar.jpg" alt="我的照片">
+
         <h1>Hi，我是令糊葱</h1>
         <p class="subtitle">前端开发者 / 大学生 / 接单中</p>
     </header>
@@ -37,3 +38,4 @@
     </section>
 </body>
 </html>
+
