--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header class="hero">
-        <img src="avatar.jpg" alt="我的照片">
+<img src="avatar.jpg" alt="我的照片" class="avatar">
 
         <h1>Hi，我是令糊葱</h1>
         <p class="subtitle">前端开发者 / 大学生 / 接单中</p>
@@ -38,5 +38,6 @@
     </section>
 </body>
 </html>
+
 
 
