Enhance index.html with navigation and IDs
Added a navigation bar and updated section IDs.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
 <link rel="stylesheet" href="style.css?v=3">
 </head>
 <body>
+    <nav class="navbar">
+    <a href="#about">关于我</a>
+    <a href="#services">服务</a>
+    <a href="#contact">联系我</a>
+</nav>
+
     <header class="hero">
 <img src="avatar.jpg" alt="我的照片" class="avatar">
 
@@ -14,7 +20,7 @@
         <p class="subtitle">前端开发者 / 大学生 / 接单中</p>
     </header>
 
-    <section class="about">
+    <section id="about">
         <h2>关于我</h2>
         <p>
             我擅长制作现代、简洁、美观的网页，支持个人主页、商家展示页、活动页、项目介绍页制作。
@@ -22,7 +28,7 @@
         </p>
     </section>
 
-    <section class="services">
+    <section id="services">
         <h2>我能提供的服务</h2>
         <ul>
             <li>✅ 个人主页制作（100-200）</li>
@@ -32,12 +38,15 @@
         </ul>
     </section>
 
-    <section class="contact">
+    <section id="contact">
         <h2>联系我</h2>
-        <p>微信：cferasdfghjkl（你来填）</p>
+        <p>微信：cferasdfghjkl</p>
+        <a class="contact-btn" href="weixin://">立即联系我</a>
+
     </section>
 </body>
 </html>
+
 
 
 
