--- a/index.html
+++ b/index.html
@@ -36,16 +36,39 @@
             <li>✅ 项目展示网页（100-300）</li>
             <li>✅ 课程作业网页代做（50-150）</li>
         </ul>
-    </section>
+    </section><section id="portfolio">
+    <h2>作品展示</h2>
+    <div class="portfolio-container">
+        <div class="card">
+            <img src="demo1.jpg" alt="项目1">
+            <p>示例项目 1（商家宣传页）</p>
+        </div>
+        <div class="card">
+            <img src="demo2.jpg" alt="项目2">
+            <p>示例项目 2（个人主页）</p>
+        </div>
+        <div class="card">
+            <img src="demo3.jpg" alt="项目3">
+            <p>示例项目 3（产品展示页）</p>
+        </div>
+    </div>
+</section>
+
 
     <section id="contact">
         <h2>联系我</h2>
+        <div class="qrcode">
+    <h3>微信二维码（扫码联系）</h3>
+    <img src="qrcode.jpg" alt="微信二维码">
+</div>
+
         <p>微信：cferasdfghjkl</p>
         <a class="contact-btn" href="weixin://">立即联系我</a>
 
     </section>
 </body>
 </html>
+
 
 
 
