--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
   <!-- HERO -->
   <header class="header">
-    <img src="https://picsum.photos/seed/avatar/300" alt="avatar" class="avatar">
+    <img src="390e18854e5f5507965d507e57d76712.jpg" alt="avatar" class="avatar">
     <h1>Hi，我是令糊葱</h1>
     <p class="tagline">前端开发者 · 个人/商家网页 · 快速交付 · 接单中</p>
   </header>
@@ -130,3 +130,4 @@
   </script>
 </body>
 </html>
+
