--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
       <div class="contact-row">
         <div class="qr-wrap">
-          <img src="https://picsum.photos/seed/qrcode/300" alt="二维码" class="qr">
+          <img src="06094125da55a6d38726232503847265.jpg" alt="二维码" class="qr">
           <div class="qr-label">微信二维码（扫码联系）</div>
         </div>
         <div class="contact-info">
@@ -130,4 +130,5 @@
   </script>
 </body>
 </html>
+
 
