--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           <p class="card-title">示例：活动报名页</p>
         </div>
       </div>
-      <p class="note">（可替换为你的真实案例截图 — 成交率提升 3x）</p>
+      <p class="note">（）</p>
     </section>
 
     <!-- CONTACT -->
@@ -130,5 +130,6 @@
   </script>
 </body>
 </html>
+
 
 
