--- a/index.html
+++ b/index.html
@@ -74,18 +74,18 @@
       <div class="portfolio-grid">
         <div class="card">
           <img src="https://picsum.photos/seed/p1/800/450" alt="项目1">
-          <p class="card-title">示例：商家展示页</p>
+          <p class="card-title">商家展示页</p>
         </div>
         <div class="card">
           <img src="https://picsum.photos/seed/p2/800/450" alt="项目2">
-          <p class="card-title">示例：个人作品集</p>
+          <p class="card-title">个人作品集</p>
         </div>
         <div class="card">
           <img src="https://picsum.photos/seed/p3/800/450" alt="项目3">
-          <p class="card-title">示例：活动报名页</p>
+          <p class="card-title">活动报名页</p>
         </div>
       </div>
-      <p class="note">（）</p>
+      <p class="note"></p>
     </section>
 
     <!-- CONTACT -->
@@ -130,6 +130,7 @@
   </script>
 </body>
 </html>
+
 
 
 
