--- a/index.html
+++ b/index.html
@@ -5,11 +5,22 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>令糊葱 · 前端接单</title>
   <meta name="description" content="令糊葱 — 前端开发 / 个人主页 / 商家展示页 / 活动页 接单中" />
-  <link rel="stylesheet" href="style.css?v=4">
+  <link rel="stylesheet" href="style.css?v=5">
 </head>
 <body>
 
-  <!-- NAV -->
+  <!-- 左侧目录（新增） -->
+  <aside class="sidebar">
+    <h2 class="side-logo">目录</h2>
+    <ul class="side-nav">
+      <li><a href="#about">关于我</a></li>
+      <li><a href="#services">服务</a></li>
+      <li><a href="#portfolio">作品</a></li>
+      <li><a href="#contact">联系我</a></li>
+    </ul>
+  </aside>
+
+  <!-- NAV（保持不变） -->
   <nav class="nav">
     <div class="nav-inner">
       <div class="brand">令糊葱</div>
@@ -24,18 +35,20 @@
 
   <!-- HERO -->
   <header class="header">
-    <img src="390e18854e5f5507965d507e57d76712.jpg" alt="avatar" class="avatar">
+    <img src="390e18854e5f5507965d507e57d76712.jpg" alt="avatar" class="avatar small-avatar">
     <h1>Hi，我是令糊葱</h1>
     <p class="tagline">前端开发者 · 个人/商家网页 · 快速交付 · 接单中</p>
   </header>
 
-  <!-- WHY / ABOUT -->
   <main>
+
+    <!-- ABOUT -->
     <section id="about" class="section">
       <div class="section-title">关于我</div>
       <p>我专注于制作简洁、现代且转化率高的网页。支持个人主页、商家展示页、活动页与项目介绍页。交付快速、响应式适配、支持后期维护与部署到 GitHub Pages。</p>
     </section>
 
+    <!-- WHY -->
     <section class="section">
       <div class="section-title">为什么选择我？</div>
       <ul class="adv-list">
@@ -50,21 +63,25 @@
     <section id="services" class="section">
       <div class="section-title">我能提供的服务</div>
       <div class="services-grid">
+
         <div class="service-card">
           <h3>个人主页</h3>
           <p>展示你的个人简介、作品与联系方式。</p>
           <div class="price">¥80 — ¥150</div>
         </div>
+
         <div class="service-card">
           <h3>商家展示页</h3>
           <p>商家 / 门店 / 工作室展示页，含优惠/活动模块。</p>
           <div class="price">¥180 — ¥400</div>
         </div>
+
         <div class="service-card">
           <h3>活动页 / H5</h3>
           <p>促销 / 报名 / 活动页面，含表单（无后台时用收集表单/邮箱/微信）。</p>
           <div class="price">¥150 — ¥500</div>
         </div>
+
       </div>
     </section>
 
@@ -72,20 +89,23 @@
     <section id="portfolio" class="section">
       <div class="section-title">作品展示</div>
       <div class="portfolio-grid">
+
         <div class="card">
-          <img src="https://picsum.photos/seed/p1/800/450" alt="项目1">
+          <img src="https://picsum.photos/seed/p1/800/450" alt="项目1" class="small-img">
           <p class="card-title">商家展示页</p>
         </div>
+
         <div class="card">
-          <img src="https://picsum.photos/seed/p2/800/450" alt="项目2">
+          <img src="https://picsum.photos/seed/p2/800/450" alt="项目2" class="small-img">
           <p class="card-title">个人作品集</p>
         </div>
+
         <div class="card">
-          <img src="https://picsum.photos/seed/p3/800/450" alt="项目3">
+          <img src="https://picsum.photos/seed/p3/800/450" alt="项目3" class="small-img">
           <p class="card-title">活动报名页</p>
         </div>
+
       </div>
-      <p class="note"></p>
     </section>
 
     <!-- CONTACT -->
@@ -94,15 +114,18 @@
       <p>加我微信或扫码联系，或发送邮件：</p>
 
       <div class="contact-row">
+
         <div class="qr-wrap">
-          <img src="06094125da55a6d38726232503847265.jpg" alt="二维码" class="qr">
+          <img src="06094125da55a6d38726232503847265.jpg" alt="二维码" class="qr small-qr">
           <div class="qr-label">微信二维码（扫码联系）</div>
         </div>
+
         <div class="contact-info">
           <p>微信：<strong>cferasdfghjkl</strong></p>
           <p>交付方式：GitHub Pages / 提供源代码 / 可协助后续部署</p>
           <a class="btn" href="#contact">立即联系我</a>
         </div>
+
       </div>
 
       <div class="faq">
@@ -113,6 +136,7 @@
         </ul>
       </div>
     </section>
+
   </main>
 
   <!-- FLOAT BUTTON -->
@@ -123,14 +147,10 @@
   </footer>
 
   <script>
-    // 轻量：点击作品图在新窗口打开（可替换为 modal）
-    document.querySelectorAll('.card img').forEach(img=>{
-      img.addEventListener('click', ()=> window.open(img.src, '_blank'));
+    document.querySelectorAll('.card img').forEach(img => {
+      img.addEventListener('click', () => window.open(img.src, '_blank'));
     });
   </script>
+
 </body>
 </html>
-
-
-
-
